<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JustPatience</string>
    <string name="win_rate_format">%s%%</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout_title">Confirm Logout</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="reset_stats_title">Reset Game Statistics</string>
    <string name="confirm_reset_stats_title">Confirm Reset</string>
    <string name="confirm_reset_stats_message">Are you sure you want to reset your game statistics? This action cannot be undone.</string>
    <string name="reset">Reset</string>
    <string name="logout_action">Logout</string>
    <string name="cancel_action">Cancel</string>
    <string name="load_action">Load</string>
    <string name="status_guest_user">Guest User</string>
    <string name="status_loading">Loading Status…</string>
    <string name="not_applicable">N/A</string>
    <string name="stats_played_format">Games Played: %d</string>
    <string name="stats_high_score_format">High Score: %d</string>
    <string name="stats_reset_success">Game statistics have been reset!</string>
    <string name="settings_button_description">Settings</string>
    <string name="new_game_button_text">New Game</string>
    <string name="load_game_button_text">Load Game</string>
    <string name="confirm_new_game_message">A game is currently in progress. Starting a new game will discard your progress. Are you sure?</string>
    <string name="undo_button_text">Undo</string>
    <string name="time_format">Time: %s</string>
    <string name="no_moves_to_undo">No moves to undo.</string>
    <string name="setting_sfx">Sound Effects</string>
    <string name="setting_hints">Enable Hints</string>
    <string name="setting_reset_stats">Reset Statistics</string>
    <string name="reset_high_score">Reset High Score</string>
    <string name="setting_sign_out">Sign Out</string>
    <string name="game_title">JustPatience</string>
    <string name="score_format">Score: %d</string>
    <string name="moves_format">Moves: %d</string>
    <string name="scoreboard_label_time">TIME</string>
    <string name="scoreboard_label_moves">MOVES</string>
    <string name="scoreboard_label_score">SCORE</string>
    <string name="scoreboard_moves_value_format">%1$03d</string>
    <string name="scoreboard_score_value_format">%1$04d</string>
    <string name="gems_total_label">Gems</string>
    <string name="gems_count_content_description">Total gems: %1$d</string>
    <string name="tickets_total_label">Tickets</string>
    <string name="tickets_count_content_description">Total tickets: %1$d</string>
    <string name="exit_game_title">Exit Game?</string>
    <string name="exit_game_message">Do you want to save your current game before exiting?</string>
    <string name="save_and_exit">Save &amp; Exit</string>
    <string name="discard_and_exit">Discard &amp; Exit</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_hint">Hint</string>
    <string name="restart_game_text">Restart</string>
    <string name="action_restart">Restart Game</string>
    <string name="restart_game_title">Restart Confirmation</string>
    <string name="restart_game_message">Are you sure you want to restart? Your current progress will be lost if not saved.</string>
    <string name="game_won_title">Congratulations!</string>
    <string name="game_won_message">You won! Final Score: %1$d | Total Moves: %2$d</string>
    <string name="game_lost_title">Game Over</string>
    <string name="loss_dialog_title">Game Over, You Lost</string>
    <string name="game_lost_message">Final Score: %1$d | Total Moves: %2$d</string>
    <string name="loss_dialog_message">Better luck next time! Start a new game and try again.</string>
    <string name="exit_to_home">Exit to Home</string>
    <string name="try_again_button_text">Try Again</string>
    <string name="new_game_title">New Game</string>
    <string name="new_game_message">Starting a new game will save your current progress, or overwrite it if no save slot is available. Continue?</string>
    <string name="game_started">New game started!</string>
    <string name="load_game_title">Load Saved Game</string>
    <string name="load_game_message">Do you want to continue your last game? The current board state will be lost.</string>
    <string name="game_loaded">Game loaded successfully!</string>
    <string name="load_error">Failed to load saved game.</string>
    <string name="status_logged_in">Logged In</string>
    <string name="no_saved_game_message">No saved game found. Starting a new game.</string>
    <string name="congratulations_title">Congratulations, You Won!</string>
    <string name="win_dialog_title">Congratulations, You Won!</string>
    <string name="win_message">You solved the game with a final score of %1$d in %2$s! Well done!</string>
    <string name="win_dialog_reward_message">Final Score: %1$d | Total Moves: %2$d</string>
    <string name="continue_playing">View Board</string>
    <string name="watch_optional_ad">Watch Optional Ad</string>
    <string name="continue_without_reward">Continue</string>
    <string name="optional_ad_not_ready">Ad not ready right now.</string>
    <string name="control_group_ad_required">Complete an ad to unlock these controls.</string>
    <string name="fake_ad_message">An AD would be displayed here once advertising is fully enabled.</string>
    <string name="fake_ad_continue">Continue</string>
    <string name="win_reward_popup_amount">%1$d</string>
    <string name="daily_bonus_title">Daily Bonus</string>
    <string name="daily_bonus_claim">Claim</string>
    <string name="daily_bonus_x2">x2 Reward</string>
    <string name="daily_bonus_x3">x3 Reward</string>
    <string name="daily_bonus_multiplier_unavailable_fallback">x%1$d reward unavailable. Base daily bonus claimed.</string>
    <string name="daily_bonus_x2_unavailable_fallback">x2 reward unavailable. Base daily bonus claimed.</string>
    <string name="magic_wand_content_description">Magic wand</string>
    <string name="magic_wand_watch_ad_content_description">Watch ad for magic wand</string>
    <string name="magic_wand_select_target_prompt">Magic Wand ready. Tap any tableau or foundation card (or an empty slot).</string>
    <string name="magic_wand_no_match">No face-down card can satisfy that target.</string>
    <string name="magic_wand_no_card_available">No hidden %1$s available to fetch.</string>
    <string name="magic_wand_pick_king_title">Which King to place here?</string>
    <string name="magic_wand_pick_ace_title">Which Ace to place here?</string>
    <string name="magic_wand_card_label_format">%1$s of %2$s</string>
    <string name="card_rank_king">King</string>
    <string name="card_rank_ace">Ace</string>
    <string name="magic_wand_ad_title">Get Magic Wand</string>
    <string name="magic_wand_ad_message">Watch an ad to add 1 Magic Wand?</string>
    <string name="magic_wand_watch_ad">Watch Ad</string>
    <string name="no_saved_game_to_continue">No saved game to continue.</string>
    <string name="help_unlock_description_format">You have no more Help Coupons. Your options are: Spend Gems, Watch an AD. Either will unlock %1$s for the next %2$d hours.</string>
    <string name="help_unlock_gems_format">%1$d gems</string>
    <string name="help_unlock_watch_ad">Watch AD</string>
    <string name="help_unlock_not_enough_gems">Not enough gems.</string>
    <string name="help_unlock_ad_not_ready">Ad not ready right now.</string>
    <string name="help_unlock_ad_only_description_format">You are out of Help Coupons.\nYou can unlock this help function\nfor %1$d hours\nby watching an Ad.</string>
    <string name="help_unlock_ad_only_description_default">You are out of Help Coupons.\nYou can unlock this help function\nfor X hours\nby watching an Ad.</string>
    <string name="develop_menu_shuffle_section">Shuffle / Deal Timing</string>
    <string name="develop_menu_card_piles_section">Card Piles</string>
    <string name="develop_menu_ads_rewards_section">Ads &amp; Rewards</string>
    <string name="develop_menu_shuffle_second_clip_delay_ms">Shuffle clip 2 delay (ms)</string>
    <string name="develop_menu_shuffle_tail_delay_ms">Shuffle tail delay (ms)</string>
    <string name="develop_menu_deal_card_interval_ms">Deal card interval (ms)</string>
    <string name="develop_menu_locked_pile_ad_offset_x_portrait">Locked pile AD X portrait (px)</string>
    <string name="develop_menu_locked_pile_ad_offset_y_portrait">Locked pile AD Y portrait (px)</string>
    <string name="develop_menu_locked_pile_ad_scale_x_portrait">Locked pile AD scale X portrait</string>
    <string name="develop_menu_locked_pile_ad_scale_y_portrait">Locked pile AD scale Y portrait</string>
    <string name="develop_menu_locked_pile_ad_offset_x_landscape">Locked pile AD X landscape (px)</string>
    <string name="develop_menu_locked_pile_ad_offset_y_landscape">Locked pile AD Y landscape (px)</string>
    <string name="develop_menu_locked_pile_ad_scale_x_landscape">Locked pile AD scale X landscape</string>
    <string name="develop_menu_locked_pile_ad_scale_y_landscape">Locked pile AD scale Y landscape</string>
    <string name="develop_menu_landscape_pile_section">Landscape Pile Offsets (dp)</string>
    <string name="develop_menu_landscape_pile_overall_offset_x">All piles X (landscape)</string>
    <string name="develop_menu_landscape_pile_overall_offset_y">All piles Y (landscape)</string>
    <string name="play_menu_new_game">New Game</string>
    <string name="play_menu_restart">Restart Game</string>
    <string name="play_menu_menu">Menu</string>
    <string name="play_menu_tester_menu">Tester Menu</string>
    <string name="play_menu_developer_menu">Developer Menu</string>
    <string name="settings_section_player">Player</string>
    <string name="settings_player_name_label">Display Name</string>
    <string name="settings_player_name_hint">Enter your name</string>
    <string name="settings_section_gameplay">Game Play</string>
    <string name="settings_draw_size_label">Draw Cards</string>
    <string name="settings_draw_1">Draw 1</string>
    <string name="settings_draw_3">Draw 3</string>
    <string name="settings_recycle_label">Waste Pile Recycles</string>
    <string name="settings_recycle_unlimited">Unlimited</string>
    <string name="settings_card_animations">Show Card Move Animations</string>
    <string name="settings_section_sound">Sound</string>
    <string name="settings_mute_music">Mute Game Music</string>
    <string name="settings_mute_card_sound">Mute Card Move Sound</string>
    <string name="settings_mute_win_sound">Mute WIN Sound</string>
    <string name="settings_section_display">Display</string>
    <string name="settings_orientation_label">Screen Orientation Lock</string>
    <string name="settings_board_layout_label">Board Layout</string>
    <string name="stats_summary_title">Statistics Summary</string>
    <string name="stats_summary_draw_one">1 Card</string>
    <string name="stats_summary_draw_three">3 Card</string>
    <string name="stats_summary_deck_one">1 Deck</string>
    <string name="stats_summary_deck_two">2 Decks</string>
    <string name="stats_summary_games_played">Games Played</string>
    <string name="stats_summary_games_won">Games Won</string>
    <string name="stats_summary_win_rate">Win Rate</string>
    <string name="stats_summary_highest_score">Highest Score</string>
    <string name="stats_summary_average_time">Average Time</string>
    <string name="close">Close</string>
</resources>